--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 max-complexity = 10
 
 [tool.mypy]
-python_version = "^3.9"
+python_version = "3.9"
 files = ['*.py', '**/*.py']
 exclude = ["docs*", "coverage", "tests"]
 plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
