--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,27 +9,22 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = {extras = ["all"], version = "^0.95.1"}
-asyncpg = "^0.27.0"
-sqlalchemy = {extras = ["asyncion", "mypy"], version = "^2.0.12"}
+SQLAlchemy = {extras = ["asyncion"], version = "^2.0.12"}
 pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
+asyncpg = "^0.27.0"
 alembic = "^1.10.4"
 
-
-[tool.poetry.group.lint.dependencies]
+[tool.poetry.dev-dependencies]
+pre-commit = "^3.3.1"
 black = "^23.3.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
-xenon = "^0.9.0"
-mypy = "^1.2.0"
-ruff = "^0.0.263"
-pre-commit = "^3.2.2"
-
-
-[tool.poetry.group.test.dependencies]
+ruff = "^0.0.264"
 pytest = "^7.3.1"
+coverage = "^7.2.5"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
@@ -69,27 +64,3 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.mccabe]
 max-complexity = 10
-
-[tool.mypy]
-python_version = "3.9"
-files = ['*.py', '**/*.py']
-exclude = ["docs*", "coverage", "tests"]
-plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
-no_site_packages = true
-follow_imports = "skip"
-ignore_missing_imports = true
-strict_optional = false
-warn_return_any = false
-warn_unused_ignores = true
-show_error_codes = true
-no_implicit_optional = true
-disallow_untyped_defs = true
-disallow_any_generics = true
-check_untyped_defs = true
-#disallow_any_unimported = true
-
-[tool.pydantic-mypy]
-init_forbid_extra = true
-init_typed = true
-warn_required_dynamic_aliases = true
-warn_untyped_fields = true
