--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ SQLAlchemy = {extras = ["asyncion"], version = "^2.0.12"}
 pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
 asyncpg = "^0.27.0"
 alembic = "^1.10.4"
+python-decouple = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.3.1"
