--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
 asyncpg = "^0.27.0"
 alembic = "^1.10.4"
 python-decouple = "^3.8"
+typer = {extras = ["all"], version = "^0.9.0"}
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.3.1"
