added security class for handling jwt for authentication

--- a/configurations/.env.sample
+++ b/configurations/.env.sample
@@ -1,3 +1,16 @@
 APP_NAME=name of the application
 MODE=<development, staging, production>
+
+HASHING_ALGORITHM_LAYER_1=algorithm used for hashing
+HASHING_ALGORITHM_LAYER_2=algorithm used for hashing
+HASHING_SALT=salt used for hashing
+
+JWT_SECRET_KEY=secret key used for JWT  # pragma: allowlist secret
+TOKEN_ALGORITHM=algorithm used for JWT
+TOKEN_ISSUER=issuer of the JWT
+TOKEN_LIFETIME_SECONDS=token lifetime in seconds (integer)
+TOKEN_LIFETIME_MINUTES=token lifetime in minutes (integer)
+TOKEN_LIFETIME_HOURS=token lifetime in hours (integer)
+TOKEN_LIFETIME_DAYS=token lifetime in days (integer)
+
 RDS_URL=url of the database
